# simple-http-request

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  delete.c  get.c  patch.c  post.c  put.c
include/: request.h
src/: CMakeLists.txt  request.c
test/: CMakeLists.txt  tests.c
test/data/: delete.txt  put.txt
test/util/: readfile.h
